feat: add tracking of available quests per player, that resets after each rift feat: add recipe for quest hub